# tentamaker

./: README.md  pyproject.toml
src/tentamaker/: __init__.py
src/tentamaker/config/: config.toml  header.tex  instructions.tex  listings.tex  packages.tex  pool.tex  snapshot.tex
src/tentamaker/resources/: header.tex  notation.tex  pool.tex
src/tentamaker/scripts/: init_exam.py  make_exam.py
