[build-system]
requires = ["setuptools>=61.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.1"
name = "tentamaker"
description = "TentaMaker"
readme = "README.md"
authors = [
  { name = "Anders Logg", email = "logg@chalmers.se" },
]
requires-python = ">=3.10"
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = ["toml"]

[project.scripts]
init-exam = "tentamaker.scripts:init_exam.main"
make-exam = "tentamaker.scripts:make_exam.main"
